# momo_lny_game

./: calibrate_roi.py  config.json  main.py  milestones.md  plan.md  pyproject.toml
bot/: __init__.py  calibrate.py  capture.py  classify.py  clicker.py  debug.py  grid.py  solver.py  state.py
tests/: test_classify.py  test_clicker.py  test_smoke.py  test_solver.py  test_state.py
