[project]
name = "momo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mss>=10.1.0",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "pyautogui>=0.9.54",
    "pyobjc-framework-quartz>=12.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
